WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
188993
Null pointer deref in WidthIterator
https://bugs.webkit.org/show_bug.cgi?id=188993
Summary
Null pointer deref in WidthIterator
Myles C. Maxfield
Reported
2018-08-27 11:17:52 PDT
Null pointer deref in WidthIterator
Attachments
Patch
(1.40 KB, patch)
2018-08-27 11:18 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(4.69 KB, patch)
2018-08-27 11:27 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews106 for mac-sierra-wk2
(3.49 MB, application/zip)
2018-08-27 13:32 PDT
,
EWS Watchlist
no flags
Details
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2018-08-27 11:18:20 PDT
Created
attachment 348173
[details]
Patch
EWS Watchlist
Comment 2
2018-08-27 11:23:41 PDT
Attachment 348173
[details]
did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Myles C. Maxfield
Comment 3
2018-08-27 11:27:15 PDT
Created
attachment 348175
[details]
Patch
Myles C. Maxfield
Comment 4
2018-08-27 11:28:10 PDT
<
rdar://problem/12639559
>
EWS Watchlist
Comment 5
2018-08-27 13:32:35 PDT
Comment on
attachment 348175
[details]
Patch
Attachment 348175
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
https://webkit-queues.webkit.org/results/8999125
New failing tests: accessibility/smart-invert-reference.html
EWS Watchlist
Comment 6
2018-08-27 13:32:37 PDT
Created
attachment 348192
[details]
Archive of layout-test-results from ews106 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
WebKit Commit Bot
Comment 7
2018-08-27 17:37:23 PDT
Comment on
attachment 348175
[details]
Patch Clearing flags on attachment: 348175 Committed
r235416
: <
https://trac.webkit.org/changeset/235416
>
WebKit Commit Bot
Comment 8
2018-08-27 17:37:25 PDT
All reviewed patches have been landed. Closing bug.
Simon Fraser (smfr)
Comment 9
2018-08-27 19:44:25 PDT
Comment on
attachment 348175
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=348175&action=review
> Source/WebCore/ChangeLog:4 > +
https://bugs.webkit.org/show_bug.cgi?id=188993
Why no radar here?
Myles C. Maxfield
Comment 10
2018-08-28 13:42:40 PDT
(In reply to Simon Fraser (smfr) from
comment #9
)
> Comment on
attachment 348175
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=348175&action=review
> > > Source/WebCore/ChangeLog:4 > > +
https://bugs.webkit.org/show_bug.cgi?id=188993
> > Why no radar here?
Just forgot to add it. It's <
rdar://problem/12639559
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug