Null pointer deref in WidthIterator https://bugs.webkit.org/show_bug.cgi?id=188993

Reviewed by Brent Fulgham.

Source/WebCore:

Test: fast/text/rtl-justification.html

We simply need to guard glyphBuffer like we do in the rest of the function.

* platform/graphics/WidthIterator.cpp:
(WebCore::WidthIterator::advanceInternal):

LayoutTests:

* fast/text/rtl-justification-expected.html: Added.
* fast/text/rtl-justification.html: Added.


Canonical link: https://commits.webkit.org/204070@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@235416 268f45cc-cd09-0410-ab3c-d52691b4dbfc